--- a/12MegaBlog/package.json
+++ b/12MegaBlog/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -33,5 +34,4 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
- 
 }
